# astir

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  __init__.py  _readme.md  astir_classification.ipynb  astir_tutorial.ipynb  cellstate_summary.hdf5  celltype_summary.hdf5  celltype_training_summary.hdf5  celltype_training_summary.loom  jackson-2020-markers-v4.yml  jackson_astir_model.hdf5  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  statedict.pt
.github/workflows/: ci.yml
ICI/: ICI_markers.yml
astir/: BaselTMA_SP43_115_X4Y8.RData  BaselTMA_SP43_115_X4Y8_assignment.csv  __init__.py  astir.py  jackson-2020-markers.yml  test2.py
astir/data/: __init__.py  data_readers.py  rds_reader.R  scdataset.py
astir/data_readers/: __init__.py  anndata_reader.py  astir_bash.py  csv_reader.py  data_readers.py
astir/models/: __init__.py  abstract.py  cellstate.py  cellstate_recognet.py  celltype.py  celltype_recognet.py  imcdataset.py  recognet.py  scdataset.py
astir/tests/: astir_bash.py  content.py  output  test_astir.py  test_bin_astir.py  test_code_smell.py  test_notebooks.py
docs/: about.rst  astir.data.rst  astir.data_readers.rst  astir.models.rst  astir.rst  conf.py  development.rst  index.rst  installation.rst  requirements.txt
docs/tutorials/: index.rst
envs/: imc.yml
models/: cellstate.py
scripts/: build-docs.sh  format.sh  lint.sh  test.sh
tests/: output  test_astir.py  test_bin_astir.py  test_code_smell.py  test_notebooks.py
tests/models/: test_cellstate.py  (+2 more)
(+45 files in other folders)
