[tool.poetry]
name = "astir"
version = "0.0.4"
description = "astir is a modelling framework for the assignment of cell type and cell state across a range of single-cell technologies such as Imaging Mass Cytometry (IMC). astir is built using pytorch and uses recognition networks for fast minibatch stochastic variational inference."
authors = ["Kieran Campbell <kierancampbell@lunenfeld.ca>"]
license = "GPLv2"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7.2"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^19.10b0"
isort = "^5.0.5"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pre-commit = "^2.4.0"
pytest = "^6.0.1"
pytest-cov = "^2.8.1"
mkdocs = "^1.1"
mkdocs-material = "^5.1.5"
markdown-include = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
